feat: unit testing & current location